<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/RegistrationFragment">

    <fragment
        android:id="@+id/RegistrationFragment"
        android:name="com.example.guessgame.screens.registration.RegistrationFragment"
        android:label="@string/registration_fragment_label"
        tools:layout="@layout/fragment_registration">

        <action
            android:id="@+id/action_RegistrationFragment_to_GameFragment"
            app:destination="@id/GameFragment"/>

    </fragment>

    <fragment
        android:id="@+id/GameFragment"
        android:name="com.example.guessgame.screens.game.GameFragment"
        android:label="@string/game_fragment_label"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_GameFragment_to_RegistrationFragment"
            app:destination="@id/RegistrationFragment"/>

        <action
            android:id="@+id/action_GameFragment_to_HistoryFragment"
            app:destination="@id/HistoryFragment"/>

    </fragment>

    <fragment
        android:id="@+id/HistoryFragment"
        android:name="com.example.guessgame.screens.history.HistoryFragment"
        android:label="@string/history_fragment_label"
        tools:layout="@layout/fragment_history">

        <action
            android:id="@+id/action_HistoryFragment_to_GameFragment"
            app:destination="@id/GameFragment"/>

    </fragment>

</navigation>