<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.game.GameFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/views_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/views_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/back_button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/game_screen_history_title_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/views_start"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="History" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/game_logout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/game_screen_logout_title_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/views_end"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Logout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/game_guess_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/game_screen_guess_main_title_text"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/game_logout_title"
        app:layout_constraintStart_toStartOf="@+id/back_button_title"
        app:layout_constraintTop_toBottomOf="@+id/game_logout_title"
        tools:text="Guess" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/game_guess_input"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/game_logout_title"
        app:layout_constraintStart_toStartOf="@+id/back_button_title"
        app:layout_constraintTop_toBottomOf="@+id/game_guess_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/game_guess_result"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/game_logout_title"
        app:layout_constraintStart_toStartOf="@+id/back_button_title"
        app:layout_constraintTop_toBottomOf="@+id/game_guess_title"
        tools:text="RESULT" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loader_calculate_guess"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:visibility="invisible"
        app:indicatorColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="@+id/game_guess_result"
        app:layout_constraintEnd_toEndOf="@+id/game_logout_title"
        app:layout_constraintStart_toStartOf="@+id/back_button_title"
        app:layout_constraintTop_toTopOf="@+id/game_guess_result" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_guesses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/game_logout_title"
        app:layout_constraintStart_toStartOf="@+id/back_button_title"
        app:layout_constraintTop_toBottomOf="@+id/game_guess_result" />

</androidx.constraintlayout.widget.ConstraintLayout>